// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Removes isQuiet 1`] = `
"import { DateRangePicker } from "@react-spectrum/s2";
let isQuiet = true;
let props = {isQuiet: true};
<div>
  <DateRangePicker />
  <DateRangePicker />
  <DateRangePicker />
  <DateRangePicker />
  <DateRangePicker />
  <DateRangePicker // TODO(S2-upgrade): check this spread for style props
  {...props} />
</div>"
`;

exports[`changes validationState to isInvalid or nothing 1`] = `
"import { DateRangePicker } from "@react-spectrum/s2";
  let validationState = 'invalid';
  let props = {validationState: 'invalid'};
  <div>
    <DateRangePicker isInvalid />
    <DateRangePicker />
    <DateRangePicker // TODO(S2-upgrade): Prop validationState could not be automatically updated because validationState could not be followed.
    validationState={validationState} />
    <DateRangePicker // TODO(S2-upgrade): check this spread for style props
    {...props} />
  </div>"
`;
